--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build-only": "vite build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@tailwindcss/forms": "^0.5.10",
     "@vueuse/core": "^12.4.0",
     "axios": "^1.7.9",
