--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@vueuse/core": "^12.4.0",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.8",
     "core-js": "^3.8.3",
     "pinia": "^2.3.0",
     "vue": "^3.2.13",
