--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,8 @@
     "outputDirectory": "dist",
      "framework": "vite",
      "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+        { "source": "/assets/(.*)", "destination": "/assets/$1" },
+        { "source": "/(.*)", "destination": "/index.html" }
      ]
 }
   
